# nlu-bridge

./: .gitignore  4-THE-REPO-OWNER.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  THIRD-PARTY-NOTICES  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi_upload.yml  pytest.yml  static_checks.yml  testpypi_upload.yml
nlubridge/: __init__.py  datasets.py  huggingface.py  nlu_dataset.py
nlubridge/dataloaders/: __init__.py  huggingface.py  luis.py  rasa.py  rasa3.py  utils.py  watson.py  watson_assistant.py
nlubridge/vendors/: __init__.py  char_ngram_intent_classifier.py  fasttext.py  luis.py  rasa.py  rasa2.py  rasa3.py  spacy.py  telekom.py  tfidf_intent_classifier.py  vendor.py  vendors.py  watson.py  watson_assistant.py
nlubridge/vendors/config/: rasa_nlu_config.yml  rasa_nlu_entity_config.yml
templates/: file-header.txt
tests/: conftest.py  test_dataset_loaders.py  test_datasets.py  test_vendors.py  test_watson_vendor.py  test_watson_vendor_mocked.py  testing_data.py
tests/fixtures/: file_with_headers.csv  huggingface_banking77.json  huggingface_wnut_17.json  huggingface_wnut_17.records  luis_nlu.json  rasa3_nlu.yml  rasa_nlu.json  watson_intents_export.csv
