[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlubridge"
authors = [{name = "k.engelbrecht@telekom.de", email = "k.engelbrecht@telekom.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
keywords=[
    "nlu",
    "intent recognition",
    "natural language understanding",
    "evaluation",
    "performance",
]
dynamic = ["version", "description"]
requires-python = ">=3, <3.9"
dependencies = ["sklearn", "python-dotenv", "lazy-imports", "ratelimit"]

[project.optional-dependencies]
watson = ["ibm_watson", "tqdm", "requests"]
telekom = ["fuzzywuzzy", "python-Levenshtein"]
fasttext = ["fasttext"]
luis = ["requests", "ratelimit"]
rasa = ["rasa==2"]
spacy = ["spacy==3.1.3"]
develop = ["pytest-cov", "flake8", "black", "pydocstyle"]

[project.urls]
Home = "https://github.com/telekom/nlu-bridge"
